removed multiple GC collection option from jvm